--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,3 +18,11 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - '6379:6379'
+
+  etcd:
+    image: "bitnami/etcd:3"
+    restart: always
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+    ports:
+      - "12379:2379"
