--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,3 +56,15 @@ services:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
     ports:
       - 9090:9090
+
+
+  zipkin:
+    # 不支持Kafka之类的简化版本
+    image: openzipkin/zipkin-slim:2.24
+    ports:
+      - '9411:9411'
+
+  grafana:
+    image: grafana/grafana-enterprise:10.2.0
+    ports:
+      - "3000:3000"
