--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -9,8 +9,10 @@ kafka:
 grpc:
   client:
     inter:
-      addr: "localhost:8090"
-      secure: false
-      threshold: 100
+      addr: "etcd:///service/interactive"
     code:
       addr: "localhost:8091"
+
+etcd:
+  addrs:
+    - "localhost:12379"
