--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,3 +68,14 @@ services:
     image: grafana/grafana-enterprise:10.2.0
     ports:
       - "3000:3000"
+
+  zookeeper:
+    image: zookeeper
+    restart: always
+    hostname: zookeeper
+    container_name: zoo
+    ports:
+      - 2181:2181
+    environment:
+      ZOO_MY_ID: 1
+      ZOO_SERVERS: server.1=zoo:2888:3888;2181
