--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -79,3 +79,13 @@ services:
     environment:
       ZOO_MY_ID: 1
       ZOO_SERVERS: server.1=zoo:2888:3888;2181
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.4
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - "xpack.security.enabled=false"
+      - "ES_JAVA_OPTS=-Xms84m -Xmx512m"
+    ports:
+      - "9200:9200"
