--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,9 @@ services:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
     ports:
       - 9090:9090
+    command:
+      - "--web.enable-remote-write-receiver"
+      - "--config.file=/etc/prometheus/prometheus.yml"
 
 
   zipkin:
